<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        tools:context="toi.com.trivia.fragments.TriviaLogin">

        <LinearLayout
            android:id="@+id/logo_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <!-- <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/group_2" />-->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/tri_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/tri" />

                <ImageView
                    android:id="@+id/trivia_logo_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tri_text"
                    android:src="@drawable/mid_logo" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/trivia_logo_text"
                    android:src="@drawable/ia" />


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_20"
                android:paddingRight="@dimen/margin_20"
                android:text="@string/login_text2"
                android:textColor="@color/footer_grey"
                android:textSize="@dimen/font_test_your_knowledge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/register_loader"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_10"
                android:theme="@style/CircularProgress" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp">


                <Button
                    android:id="@+id/play_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/play_btn_box_height"
                    android:layout_above="@+id/footer_layout"
                    android:layout_marginBottom="@dimen/margin_16"
                    android:layout_marginLeft="@dimen/play_btn_margin"
                    android:layout_marginRight="@dimen/play_btn_margin"
                    android:background="@drawable/rounded_button_yellow"
                    android:text="@string/button_play_new"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    android:textStyle="bold" />


                <LinearLayout
                    android:id="@+id/footer_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/play_button"
                    android:layout_alignLeft="@+id/play_button"
                    android:layout_alignParentBottom="true"
                    android:layout_alignRight="@+id/play_button"
                    android:layout_alignStart="@+id/play_button"
                    android:layout_marginBottom="@dimen/margin_15"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/margin_20"
                    android:paddingRight="@dimen/margin_20">

                    <TextView
                        android:id="@+id/open_prizes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/prizes"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_12" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/open_faq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/faq"

                        android:textColor="@color/white"
                        android:textSize="@dimen/font_12" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/open_about_us"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/about_us"

                        android:textColor="@color/white"
                        android:textSize="@dimen/font_12" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/white" />

                    <TextView
                        android:id="@+id/open_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_12" />
                </LinearLayout>


            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>
</FrameLayout>