<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/week_calender_layout"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:clickable="true"
    tools:context=".utility.ui.WeekCalenderView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_32"
        android:background="@color/grey_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_10"
            android:text="@string/start_date"
            android:textColor="@color/white"
            android:textSize="@dimen/font_12" />


        <TextView
            android:id="@+id/selected_week_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_5"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/font_14" />

        <TextView
            android:id="@+id/selected_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_5"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/font_20" />


        <CalendarView
            android:id="@+id/week_calender"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@color/white"
            android:selectedWeekBackgroundColor="@color/yellow" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/cancel_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/ok_week"
                android:paddingBottom="@dimen/margin_5"
                android:paddingRight="@dimen/margin_15"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/font_16" />


            <TextView
                android:id="@+id/ok_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingBottom="@dimen/margin_5"
                android:paddingLeft="@dimen/margin_5"
                android:paddingRight="@dimen/margin_15"
                android:text="@string/ok"
                android:textColor="@color/black"
                android:textSize="@dimen/font_16" />
        </RelativeLayout>
    </LinearLayout>


</FrameLayout>
