<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

    <ProgressBar
        android:id="@+id/timer_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="1500"
        android:minHeight="@dimen/time_bar_height"
        android:progress="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/score_bar_padding_left"
        android:baselineAligned="false"
        android:paddingRight="@dimen/score_bar_padding_right"
        android:paddingTop="@dimen/score_bar_padding_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/category"
                android:textColor="@color/white"
                android:textSize="@dimen/font_10" />

            <TextView
                android:id="@+id/cat_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="left"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/font_18"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/time_left"
                android:textColor="@color/white"
                android:textSize="@dimen/font_10" />

            <TextView
                android:id="@+id/time_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="left"
                android:text=""
                android:textColor="@color/yellow"
                android:textSize="@dimen/font_18"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/ques_no"
                android:textColor="@color/white"
                android:textSize="@dimen/font_10" />

            <TextView
                android:id="@+id/ques_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:gravity="left"
                android:text=""
                android:textColor="@color/white"
                android:textSize="@dimen/font_18"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


    <include
        android:id="@+id/quiz_"
        layout="@layout/fragment_quiz_questionnaire"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
